--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -177,6 +177,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   width: 360px;
+  gap: 24px;
 }
 
 .mainContent {
@@ -222,6 +223,7 @@ button:disabled {
 .calendarBlock {
   position: absolute;
   margin: 50px 0px 0px 300px;
+  z-index: 100;
 }
 
 /*--------------------------------------------------MainContent-------------------------------------------------------*/
@@ -250,7 +252,7 @@ button:disabled {
   height: 200px;
 }
 .imagesBlock:hover {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .hotelsInFavourite {
@@ -262,7 +264,7 @@ button:disabled {
 }
 
 .hotelElementContainer {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 550px;
   padding: 0 7px;
 }
@@ -273,6 +275,7 @@ button:disabled {
   padding: 16px;
   display: flex;
   gap: 15px;
+  position: relative;
 }
 
 .hotelImg {
@@ -308,7 +311,11 @@ button:disabled {
 .hotelElementP span {
   color: #424242;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
+}
+
+.hotelElementPSmall {
+  font-size: 0.7rem;
 }
 
 .stars {
@@ -322,4 +329,49 @@ button:disabled {
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
+}
+
+/*------------------------------------------FAVOURITE-------------------------------------------------------*/
+.favoritesSection {
+  padding: 32px;
+  background: #ffffff;
+  box-shadow: 0px 4px 33px rgba(0, 0, 0, 0.04);
+  border-radius: 16px;
+  width: 360px;
+  height: 472px;
+}
+
+.favouriteHotelsBlock {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 350px;
+}
+
+.textInfo1Favourite {
+  flex-basis: 90%;
+  gap: 5px;
+}
+
+.teztInfo2Favourite {
+  padding: 0 0 0 165px;
+  position: absolute;
+  height: 60px;
+  width: 269px;
+}
+
+.filterBlock {
+  padding: 20px 0;
+  display: flex;
+  gap: 20px;
+}
+
+.filterButton {
+  border: 1px solid #41522e;
+  border-radius: 4px;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  padding: 4px 8px;
+  cursor: pointer;
+  color: #41522e;
 }
