--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -182,6 +182,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   width: 360px;
+  gap: 24px;
 }
 .mainContent {
   width: 664px;
@@ -226,6 +227,7 @@ button:disabled {
 .calendarBlock {
   position: absolute;
   margin: 50px 0px 0px 300px;
+  z-index: 100;
 }
 
 /*--------------------------------------------------MainContent-------------------------------------------------------*/
@@ -254,7 +256,7 @@ button:disabled {
   padding: 20px 0;
   height: 200px;
   &:hover {
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
@@ -267,7 +269,7 @@ button:disabled {
 }
 
 .hotelElementContainer {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 550px;
   padding: 0 7px;
 }
@@ -279,6 +281,7 @@ button:disabled {
   padding: 16px;
   display: flex;
   gap: 15px;
+  position: relative;
 }
 
 .hotelImg {
@@ -313,8 +316,12 @@ button:disabled {
   span {
     color: #424242;
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 500;
   }
+}
+
+.hotelElementPSmall {
+  font-size: 0.7rem;
 }
 
 .stars {
@@ -328,4 +335,50 @@ button:disabled {
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
+}
+
+/*------------------------------------------FAVOURITE-------------------------------------------------------*/
+
+.favoritesSection {
+  padding: 32px;
+  background: #ffffff;
+  box-shadow: 0px 4px 33px rgba(0, 0, 0, 0.04);
+  border-radius: 16px;
+  width: 360px;
+  height: 472px;
+}
+
+.favouriteHotelsBlock {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 350px;
+}
+
+.textInfo1Favourite {
+  flex-basis: 90%;
+  gap: 5px;
+}
+
+.teztInfo2Favourite {
+  padding: 0 0 0 165px;
+  position: absolute;
+  height: 60px;
+  width: 269px;
+}
+
+.filterBlock {
+  padding: 20px 0;
+  display: flex;
+  gap: 20px;
+}
+
+.filterButton {
+  border: 1px solid #41522e;
+  border-radius: 4px;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  padding: 4px 8px;
+  cursor: pointer;
+  color: #41522e;
 }
