--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -20,6 +20,7 @@ body {
 main {
   width: 100%;
   height: 100%;
+  padding-bottom: 50px;
 }
 
 .container {
@@ -85,7 +86,7 @@ button:disabled {
 /*----------------------------------------------AUTH_FORM------------------------------------------------------------------------*/
 
 .authContainer {
-  background-image: url(../../img/AuthBack.jpg);
+  background-image: url(../../img/UnauthenticatedScreen/AuthBack.jpg);
   width: 100%;
   height: 100%;
   display: flex;
@@ -221,7 +222,8 @@ button:disabled {
 }
 
 #date {
-  background: url('../../img/calendarIcon.svg') no-repeat scroll 260px 16px;
+  background: url('../../img/icons/calendarIcon.svg') no-repeat scroll 260px
+    16px;
 }
 
 .calendarBlock {
@@ -381,4 +383,9 @@ button:disabled {
   padding: 4px 8px;
   cursor: pointer;
   color: #41522e;
+}
+
+.unactiveButton {
+  border: 1px solid #e5e5e5;
+  color: #99a0a3;
 }
