--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -21,7 +21,6 @@ body {
 main {
   width: 100%;
   height: 100%;
-  padding-bottom: 50px;
 }
 
 .container {
@@ -59,6 +58,23 @@ button:disabled {
   align-items: center;
 }
 
+.BrokenRoutePage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  text-align: center;
+}
+
+.homeLink {
+  text-decoration: underline;
+  color: blue;
+  font-size: 2rem;
+  padding-bottom: 40px;
+}
+
 .customScroll::-webkit-scrollbar-track {
   background-color: #e7e7e7;
 }
@@ -87,6 +103,7 @@ button:disabled {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1440px;
 }
 
 .authForm {
@@ -141,6 +158,7 @@ button:disabled {
 .errorBlock {
   font-size: 0.75rem;
   height: 20px;
+  padding-top: 8px;
 }
 
 .isError {
@@ -156,7 +174,7 @@ button:disabled {
   align-self: flex-start;
   padding: 32px 31px;
   align-items: center;
-  min-width: 1200px;
+  min-width: 1440px;
 }
 
 .headerH1 {
@@ -208,7 +226,7 @@ button:disabled {
 
 .mainSection {
   width: 100%;
-  padding: 0 196px;
+  padding: 0 196px 50px;
   display: flex;
   gap: 24px;
 }
@@ -332,6 +350,23 @@ button:disabled {
   justify-content: flex-end;
 }
 
+.errorMsg {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 50%;
+  justify-content: space-between;
+  margin: auto;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.errorP {
+  color: red;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
 /*------------------------------------------FAVOURITE-------------------------------------------------------*/
 .favoritesSection {
   padding: 32px;
@@ -353,8 +388,8 @@ button:disabled {
   gap: 5px;
 }
 
-.teztInfo2Favourite {
-  padding: 0 0 0 165px;
+.textInfo2Favourite {
+  padding: 0 0 0 155px;
   position: absolute;
   height: 60px;
   width: 269px;
@@ -380,4 +415,9 @@ button:disabled {
 .unactiveButton {
   border: 1px solid #e5e5e5;
   color: #99a0a3;
+}
+
+.favouriteContentH3 {
+  color: #424242;
+  font-size: 1.5rem;
 }
