--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -342,6 +342,11 @@ button:disabled {
 
 .hotelElementPSmall {
   font-size: 0.7rem;
+  span {
+    max-width: 80px;
+    overflow-wrap: break-word;
+    text-align: center;
+  }
 }
 
 .stars {
@@ -398,8 +403,9 @@ button:disabled {
 .textInfo2Favourite {
   padding: 0 0 0 155px;
   position: absolute;
-  height: 60px;
+  min-height: 60px;
   width: 269px;
+  gap: 20px;
 }
 
 .filterBlock {
